* 2012-08-03 - thorben.betten@open-xchange.com

 - Fix for bug 22729: Ignore HTML parts when replying to a mail in text-only mode
 - Fix for bug 22715: Properly deal with nested multipart/related part on reply/forward

* 2012-08-03 - marcus.klein@open-xchange.com

 - Fix for bug 22384: Using buddy class loading to solve ClassNotFoundException using RMI interface with reseller bundle installed.

* 2012-08-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 22723: Force reporting of deleted items in sync-collection 
 
* 2012-08-01 - jan.bauerdick@open-xchange.com

 - New implementation of sessionstorageservice, storing sessions with cassandra

* 2012-08-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 21422: Add UIDs to appointment when missing
 - Fix for bug 22681: Fixed SQL statement

* 2012-07-31 - marcus.klein@open-xchange.com

 - Fix for bug 22433: Removed obsolete property writeOnly from configuration file configdb.properties.

* 2012-07-30 - martin.herfurth@open-xchange.com

 - Fix for bug 22339: Fixed NullPointerException.

* 2012-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 22536: Introduced custom JavaMail property "mail.imap.failOnNOFetch":
                      If an issued FETCH command is acknowledged with a "NO" response code, an appropriate CommandFailedException is thrown
 - Fix for bug 22608: Fixed MIME structure of saved draft message
 - Fix for bug 22579: Fixed MIME structure of saved draft message
 - Fix for bug 22548: Fixed MIME structure of saved draft message
 - Fix for bug 21839: Fixed MIME structure of saved draft message

* 2012-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 22689: Provide empty default alarms

* 2012-07-28 - thorben.betten@open-xchange.com

 - Fix for bug 22685: Increased timeout to 10sec
 - Fix for bug 22613: Insert line-break as separator
 - Fix for bug 22659: using proper monitor object

* 2012-07-27 - jan.bauerdick@open-xchange.com
